# RETINAS

./: Makefile  README.md  configure  meson.build  meson.build.in  meson_options.txt
doc/: Interfacing_with_the_C_library.ipynb  Upsampling.ipynb
retina/: .pylintrc  cross_correlation_CUDA.py  initialize_library.py  retina.py  synthetic_data_test.py  test.py  utils.py
retina/src/cross_correlation_c/: Makefile  build_new_eigenframe.c  compute_displacements_and_build_next_eigenframe.c  compute_reverse_shift_matrix.c  cross_correlate_and_compute_displacements.c  cross_correlate_ref_and_new_images.c  displacements_full_pixel_estimate.c  displacements_sub_pixel_estimate.c  get_eigenframe.c  image_analysis.h  retina.h  set_zeroth_eigenframe.c  state_finalize.c  state_initialize.c  typecast_input_image_and_compute_brightness.c  typecast_input_image_rebin_4x4_and_compute_brightness.c  upsample_around_displacements.c
retina/src/cross_correlation_cuda/: Makefile  build_next_eigenframe.cu  complex_conjugate_2d.cu  compute_displacements_and_build_next_eigenframe.cu  compute_displacements_and_build_next_eigenframe_shot_noise.cu  compute_kernels.cu  compute_reverse_shift_matrix.cu  cross_correlate_ref_and_new_images.cu  displacements_full_pixel_estimate.cu  displacements_full_pixel_estimate_shot_noise.cu  displacements_sub_pixel_estimate.cu  displacements_sub_pixel_estimate_shot_noise.cu  find_maxima_minima.cu  function_prototypes.h  get_eigenframe.cu  image_analysis.h  print_2d_array.cu  set_zeroth_eigenframe.cu  state_finalize.cu  state_initialize.cu  typecast_input_image_and_compute_brightness_shot_noise.cu  upsample_around_displacements.cu
retina/src/cross_correlation_eigenshot_cuda/: complex_conjugate.cu  compute_absolute_value.cu  compute_kernels.cu  compute_reverse_shift_2D.cu  element_wise_multiplication_conj.cu  find_minima.cu  get_subpixel_shift_by_upsampling.cu  image_analysis.cu  preprocess_cross_correlation_data.cu  shift_image_and_add_to_eigenframe.cu
retinas/: pyretinas.py  retinas.py  synthetic_data_test.py  utils.py
retinas/src/: meson.build
retinas/src/cross_correlation_c/: add_new_image_to_sum.c  build_new_eigenframe.c  compute_displacements_and_add_new_image_to_sum.c  compute_displacements_and_build_next_eigenframe.c  compute_displacements_and_update_reference_image.c  compute_reverse_shift_matrix.c  cross_correlate_ref_and_new_images.c  displacements_full_pixel_estimate.c  displacements_sub_pixel_estimate.c  get_eigenframe.c  get_reference_image.c  get_reference_image_freq.c  get_reference_image_time.c  gpu_works.c  initialize_image_sum.c  meson.build  retinas.h  set_first_reference_image.c  set_zeroth_eigenframe.c  state_finalize.c  state_initialize.c  typecast_input_image_and_compute_brightness.c  typecast_input_image_rebin_4x4_and_compute_brightness.c  update_reference_image.c  update_reference_image_from_image_sum.c  upsample_around_displacements.c
retinas/src/cross_correlation_cuda/: absolute_value_2d.cu  add_new_image_to_sum.cu  build_next_eigenframe.cu  complex_conjugate_2d.cu  compute_displacements_and_add_new_image_to_sum.cu  compute_displacements_and_add_new_image_to_sum_shot_noise.cu  compute_displacements_and_add_to_image_sum.cu  compute_displacements_and_add_to_image_sum_shot_noise.cu  compute_displacements_and_update_reference_image.cu  compute_displacements_and_update_reference_image_shot_noise.cu  compute_kernels.cu  compute_reverse_shift_matrix.cu  cross_correlate_ref_and_new_images.cu  displacements_full_pixel_estimate.cu  displacements_full_pixel_estimate_shot_noise.cu  displacements_sub_pixel_estimate.cu  displacements_sub_pixel_estimate_shot_noise.cu  element_wise_multiplication_conj_2d.cu  find_maxima_minima.cu  function_prototypes.h  get_eigenframe.cu  get_reference_image.cu  get_reference_image_freq.cu  get_reference_image_time.cu  gpu_works.cu  image_analysis.h  initialize_image_sum.cu  meson.build  print_arrays.cu  set_first_reference_image.cu  state_finalize.cu  state_initialize.cu  test_gpu_works.cu  typecast_input_image_and_compute_brightness.cu  typecast_input_image_and_compute_brightness_shot_noise.cu  update_reference_image.cu  update_reference_image_from_image_sum.cu  upsample_around_displacements.cu
src/: cross_correlation.py  cross_correlation_C.py  cross_correlation_c.py  cross_correlation_eigenshot.py  cross_correlation_eigenshot_CUDA.py  initialize_library.py  retina.py  test.py  utils.py
src/cross_correlation_c/: Cstate_finalize.c  Cstate_initialize.c  Makefile  build_new_eigenframe.c  compute_displacements.c  compute_displacements_and_build_next_eigenframe.c  compute_reverse_shift_matrix.c  cross_correlate_and_compute_displacements.c  get_displacements_by_cross_correlation.c  get_subpixel_displacements_by_upsampling.c  get_subpixel_shift_by_upsampling.c  image_analysis.c  image_analysis.h  initialize_finalize_Cstate.c  preprocess_cross_correlation_data.c  set_zeroth_eigenframe.c  state_finalize.c  state_initialize.c  typecast_input_image_and_compute_brightness.c  typecast_input_image_rebin_4x4_and_compute_brightness.c  upsample_and_compute_subpixel_displacements.c
src/cross_correlation_cuda/: Makefile  absolute_value_2d.cu  build_next_eigenframe.cu  complex_conjugate_2d.cu  complex_matrix_multiply.cu  compute_displacements_and_build_next_eigenframe.cu  compute_kernels.cu  compute_reverse_shift_2D.cu  compute_reverse_shift_matrix.cu  cross_correlate_and_compute_displacements.cu  element_wise_multiplication_conj_2d.cu  find_maxima.cu  find_maxima_minima.cu  function_prototypes.h  get_subpixel_shift_by_upsampling.cu  image_analysis.cu  image_analysis.h  initialize_finalize_CUDAstate.cu  matrix_multiplication.cu  preprocess_cross_correlation_data.cu  shift_image_and_add_to_eigenframe.cu  typecast_input_image_and_compute_brightness.cu  upsample_and_compute_subpixel_displacements.cu
src/cross_correlation_eigenshot_cuda/: Makefile  function_prototypes.h  get_subpixel_shift_by_upsampling.cu  image_analysis.cu  image_analysis.h  initialize_finalize_CUDAstate.cu  preprocess_cross_correlation_data.cu
(+11 files in other folders)
