option('with-c',
       type : 'boolean',
       value : true,
       description : 'build the C library')

option('with-cuda',
       type : 'boolean',
       value : true,
       description : 'build the CUDA library')

option('blas_lib',
       type : 'string',
       value : 'blas',
       description : 'BLAS library name')

option('precision',
       type : 'string',
       value : 'single',
       description : 'Precision of the C and CUDA libraries (single or double)')
