c_inc_dir = include_directories('.')
c_srcs = files(
  'build_new_eigenframe.c',
  'compute_displacements_and_build_next_eigenframe.c',
  'compute_reverse_shift_matrix.c',
  'cross_correlate_ref_and_new_images.c',
  'displacements_full_pixel_estimate.c',
  'displacements_sub_pixel_estimate.c',
  'get_eigenframe.c',
  'set_zeroth_eigenframe.c',
  'state_finalize.c',
  'state_initialize.c',
  'typecast_input_image_and_compute_brightness.c',
  'typecast_input_image_rebin_4x4_and_compute_brightness.c',
  'upsample_around_displacements.c'
)

headers = files('retinas.h')
