cuda_inc_dir = include_directories('.')
cuda_srcs = files(
  'absolute_value_2d.cu',
  'build_next_eigenframe.cu',
  'complex_conjugate_2d.cu',
  'compute_displacements_and_build_next_eigenframe.cu',
  'compute_displacements_and_build_next_eigenframe_shot_noise.cu',
  'compute_kernels.cu',
  'compute_reverse_shift_matrix.cu',
  'cross_correlate_ref_and_new_images.cu',
  'displacements_full_pixel_estimate.cu',
  'displacements_full_pixel_estimate_shot_noise.cu',
  'displacements_sub_pixel_estimate.cu',
  'displacements_sub_pixel_estimate_shot_noise.cu',
  'element_wise_multiplication_conj_2d.cu',
  'find_maxima_minima.cu',
  'get_eigenframe.cu',
  'print_arrays.cu',
  'set_zeroth_eigenframe.cu',
  'state_finalize.cu',
  'state_initialize.cu',
  'typecast_input_image_and_compute_brightness.cu',
  'typecast_input_image_and_compute_brightness_shot_noise.cu',
  'upsample_around_displacements.cu',
)
