cuda_inc_dir = include_directories('.')
cuda_srcs = files(
  'absolute_value_2d.cu',
  'add_new_image_to_sum.cu',
  'complex_conjugate_2d.cu',
  'compute_displacements_and_add_to_image_sum.cu',
  'compute_displacements_and_add_to_image_sum_shot_noise.cu',
  'compute_displacements_and_update_reference_image.cu',
  'compute_displacements_and_update_reference_image_shot_noise.cu',
  'compute_kernels.cu',
  'compute_reverse_shift_matrix.cu',
  'cross_correlate_ref_and_new_images.cu',
  'displacements_full_pixel_estimate.cu',
  'displacements_full_pixel_estimate_shot_noise.cu',
  'displacements_sub_pixel_estimate.cu',
  'displacements_sub_pixel_estimate_shot_noise.cu',
  'element_wise_multiplication_conj_2d.cu',
  'find_maxima_minima.cu',
  'get_reference_image.cu',
  'print_arrays.cu',
  'set_first_reference_image.cu',
  'state_finalize.cu',
  'state_initialize.cu',
  'typecast_input_image_and_compute_brightness.cu',
  'typecast_input_image_and_compute_brightness_shot_noise.cu',
  'update_reference_image.cu',
  'update_reference_image_from_image_sum.cu',
  'upsample_around_displacements.cu',
)
